src/objects/SBQQ__Subscription__c.object
<CustomObject>
    <fields>
        <fullName>SBQQ__RequiredById__c</fullName>
        <description>What Id the field is required by.</description>
        <inlineHelpText>What Id the field is required by.</inlineHelpText>
        <label>Required By Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RequiredByProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Product of this subscription.</description>
        <inlineHelpText>Parent Product of this subscription.</inlineHelpText>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Child Subscriptions</relationshipLabel>
        <relationshipName>ChildSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RevisedSubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup the Revised Subscription for this field.</inlineHelpText>
        <label>Revised Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Revisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RootId__c</fullName>
        <description>The ID of the subscription or asset at the root of the bundle that contains this subscription</description>
        <externalId>true</externalId>
        <inlineHelpText>The ID of the subscription or asset at the root of the bundle that contains this subscription</inlineHelpText>
        <label>Root Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentEndDate__c</fullName>
        <description>For MDQ products, the End Date from the original segment&apos;s Quote Line.</description>
        <inlineHelpText>For MDQ products, the End Date from the original segment&apos;s Quote Line.</inlineHelpText>
        <label>Segment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentIndex__c</fullName>
        <description>For multi-segmented Products, Index representing this Quote Line&apos;s position in the segment table.</description>
        <inlineHelpText>For multi-segmented Products, Index representing this Quote Line&apos;s position in the segment table.</inlineHelpText>
        <label>Segment Index</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentKey__c</fullName>
        <label>Segment Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentLabel__c</fullName>
        <description>For multi-segmented Products, this is the Column header label (e.g. &quot;Year 1&quot;) associated with this line.</description>
        <inlineHelpText>For multi-segmented Products, this is the Column header label (e.g. &quot;Year 1&quot;) associated with this line.</inlineHelpText>
        <label>Segment Label</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentQuantity__c</fullName>
        <description>For MDQ Products, the quantity corresponding to the segment&apos;s original Quote Line</description>
        <inlineHelpText>For MDQ Products, the quantity corresponding to the segment&apos;s original Quote Line</inlineHelpText>
        <label>Segment Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentStartDate__c</fullName>
        <description>For MDQ products, the Start Date from the original segment&apos;s Quote Line.</description>
        <inlineHelpText>This is the Break Date migrated from the legacy system</inlineHelpText>
        <label>Segment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentUpliftAmount__c</fullName>
        <description>For MDQ products, the Uplift Amount from the original segment&apos;s Quote Line.</description>
        <inlineHelpText>For MDQ products, the Uplift Amount from the original segment&apos;s Quote Line.</inlineHelpText>
        <label>Segment Uplift (Amt)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentUplift__c</fullName>
        <description>For MDQ products, the Uplift from the original segment&apos;s Quote Line.</description>
        <inlineHelpText>For MDQ products, the Uplift from the original segment&apos;s Quote Line.</inlineHelpText>
        <label>Segment Uplift</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__SpecialPrice__c</fullName>
        <description>Special Price for this Subscription.</description>
        <inlineHelpText>Special Price for this Subscription.</inlineHelpText>
        <label>Special Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__StartDate__c</fullName>
        <description>The first date this subscription is in effect.</description>
        <formula>if ( ISBLANK (SBQQ__SubscriptionStartDate__c), SBQQ__Contract__r.StartDate, SBQQ__SubscriptionStartDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The first date this subscription is in effect.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionEndDate__c</fullName>
        <description>Matches the quote line end date by default. If blank, it will match the contract end date.</description>
        <inlineHelpText>Matches the quote line end date by default. If blank, it will match the contract end date.</inlineHelpText>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionStartDate__c</fullName>
        <description>Matches the quote line start date by default. If blank, it will match the contract start date.</description>
        <inlineHelpText>Matches the quote line start date by default. If blank, it will match the contract start date.</inlineHelpText>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Schedule for discounts based on subscription term. This is useful when you want to show a breakdown of payments in separate groups, for different terms, yet you want to discount reflected for the entire duration of the subscription. Leave Term Discount Level blank if you want discount schedules applied based on the term of each line item.</description>
        <inlineHelpText>Schedule for discounts based on subscription term. Setting this to &quot;Group&quot; applies the discount rate for the group term, while setting it to &quot;Quote&quot; applies the discount rate for the entire quote term, regardless of the different terms in your groups.</inlineHelpText>
        <label>Term Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Subscriptions (Term Discouned)</relationshipLabel>
        <relationshipName>TermDiscountedSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TerminatedDate__c</fullName>
        <description>Date on which this subscription terminated.</description>
        <inlineHelpText>Date the subscription terminated. Automatically populated when covered asset is upgraded.</inlineHelpText>
        <label>Terminated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__UnitCost__c</fullName>
        <description>Unit Cost for this Subscription.</description>
        <inlineHelpText>Unit Cost for this Subscription.</inlineHelpText>
        <label>Unit Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Square_Footage__c</fullName>
        <label>Square Footage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stepped_Increase_Amount__c</fullName>
        <label>Stepped Increase Amount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Stepped_Increase_End_Date__c</fullName>
        <label>Stepped Increase End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stepped_Increase_Start_Date__c</fullName>
        <label>Stepped Increase Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Annualised_Rent__c</fullName>
        <formula>SBQQ__UnitCost__c *
            CASE( SBQQ__BillingFrequency__c ,
            &apos;Monthly&apos;, 12,
            &apos;Quarterly&apos;, 12/3,
            &apos;Traditional Quarters&apos;, 12/3,
            &apos;Semiannual&apos;, 12/6,
            &apos;Annual&apos;, 12/12,
            &apos;Weekly&apos;, 52,
            0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For headline products, this is the unit cost figure expressed as an amount per year</inlineHelpText>
        <label>Total Annualised Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Guarantor__c</fullName>
        <label>Type of Guarantor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Subscription</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__ContractNumber__c</columns>
        <columns>SBQQ__QuoteLine__c</columns>
        <columns>SBQQ__Product__c</columns>
        <columns>SBQQ__SubscriptionStartDate__c</columns>
        <columns>SBQQ__StartDate__c</columns>
        <columns>SBQQ__EndDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SUB-{0000000}</displayFormat>
        <label>Subscription #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Backdated_Start_Date_before_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Backdated_Start_Date__c &lt; SBQQ__StartDate__c</errorConditionFormula>
        <errorDisplayField>Backdated_Start_Date__c</errorDisplayField>
        <errorMessage>Backdated Start Date can&apos;t be before Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Increase_Start_Date_before_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Stepped_Increase_Start_Date__c &lt; SBQQ__StartDate__c</errorConditionFormula>
        <errorDisplayField>Backdated_Start_Date__c</errorDisplayField>
        <errorMessage>Stepped Increase Start Date can&apos;t be before Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Renewal_Quantity_cannot_be_editable</fullName>
        <active>true</active>
        <description>Renewal Quantity cannot be editable.</description>
        <errorConditionFormula>if ( (SBQQ__Contract__r.SBQQ__PreserveBundleStructureUponRenewals__c == true &amp;&amp; SBQQ__RenewalQuantity__c != SBQQ__Quantity__c &amp;&amp; ISCHANGED(SBQQ__RenewalQuantity__c)), true, false)</errorConditionFormula>
        <errorMessage>Preserve Bundle Structure is checked on Contract, Renewal Quantity cannot be different from Quantity.</errorMessage>
    </validationRules>
</CustomObject>